tmux: fixed moving window keymapping

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -6,8 +6,8 @@ bind-key C-k send-prefix
 # window
 unbind-key C-p
 bind-key p last-window
-bind-key k next-window
-bind-key j previous-window
+bind-key j next-window
+bind-key k previous-window
 
 # pane
 set-option -g mouse-select-pane on
