tmux: fix status line color

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -3,11 +3,24 @@ unbind-key C-b
 set-option -g prefix C-k
 bind-key C-k send-prefix
 
+# reload setting
+bind r source-file ~/.tmux.conf
+
+# copy mode like vi
+set-window-option -g mode-keys vi
+
 # window
-unbind-key C-p
-bind-key p last-window
-bind-key j next-window
-bind-key k previous-window
+bind p last-window
+bind j next-window
+bind Space next-window
+bind k previous-window
 
 # pane
 set-option -g mouse-select-pane on
+
+# status line
+set -g status-bg colour240
+set -g status-fg colour7
+set-window-option -g window-status-current-fg colour208
+#set-window-option -g window-status-current-bg colour45
+set-window-option -g window-status-current-attr bold
