tmux: start index is 0

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -18,6 +18,8 @@ bind k previous-window
 # pane
 set-option -g mouse-select-pane on
 
+set-option -g base-index 0
+
 # status line
 set -g status-bg colour240
 set -g status-fg colour7
