tmux: specified scroll buffer size

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -15,6 +15,9 @@ bind j next-window
 bind Space next-window
 bind k previous-window
 
+# scroll size
+set-option -g history-limit 65535
+
 # pane
 set-option -g mouse-select-pane on
 
