tmux: yank from tmux buffer to pbcopy

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -27,3 +27,8 @@ set -g status-fg colour7
 set-window-option -g window-status-current-fg colour208
 #set-window-option -g window-status-current-bg colour45
 set-window-option -g window-status-current-attr bold
+
+# use to pbcopy/pbpaste on tmux
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+unbind y
+bind y run-shell '~/local/bin/yank'
