--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,3 +1,11 @@
+set -g default-terminal "screen-256color"
+
+set -g set-titles off
+setw -g automatic-rename off
+
+set-window-option -g monitor-activity on
+set -g visual-activity on
+
 # prefix
 unbind-key C-b
 set-option -g prefix C-k
@@ -18,12 +26,46 @@ bind k previous-window
 # scroll size
 set-option -g history-limit 65535
 
+set-option -g mouse-select-window on
+set -g mode-mouse on
+
 # pane
 set-option -g base-index 0
 
 # status line
-set -g status-bg colour240
-set -g status-fg colour7
-set-window-option -g window-status-current-fg colour208
-#set-window-option -g window-status-current-bg colour45
-set-window-option -g window-status-current-attr bold
+set-option -g status-position top
+set-window-option -g window-status-current-format ' #I #W '
+set-window-option -g window-status-format ' #I #W '
+set -g status-right '%Y-%m-%d(%H:%M)'
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
