tmux: fix option

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -3,9 +3,6 @@ set -g default-terminal "screen-256color"
 set -g set-titles off
 setw -g automatic-rename off
 
-set-window-option -g monitor-activity on
-set -g visual-activity on
-
 # prefix
 unbind-key C-b
 set-option -g prefix C-k
@@ -33,7 +30,7 @@ set-option -g base-index 0
 set-option -g status-position top
 set-window-option -g window-status-current-format ' #I #W '
 set-window-option -g window-status-format ' #I #W '
-set -g status-right '%Y-%m-%d(%H:%M)'
+set -g status-right '%Y-%m-%d | %H:%M'
 
 #### COLOUR (Solarized 256)
 
