tmux: fix status position

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -27,7 +27,7 @@ set-option -g history-limit 65535
 set-option -g base-index 0
 
 # status line
-set-option -g status-position top
+#set-option -g status-position top
 set-window-option -g window-status-current-format ' #I #W '
 set-window-option -g window-status-format ' #I #W '
 set -g status-right '%Y-%m-%d | %H:%M'
