tmux: samll update

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "screen-256color"
 
 set -g set-titles off
 setw -g automatic-rename off
+set -sg escape-time 1
 
 # prefix
 unbind-key C-b
@@ -19,6 +20,8 @@ bind p last-window
 bind j next-window
 bind Space next-window
 bind k previous-window
+bind | split-window -h
+bind - split-window -v
 
 # scroll size
 set-option -g history-limit 65535
@@ -30,13 +33,14 @@ set-option -g base-index 0
 #set-option -g status-position top
 set-window-option -g window-status-current-format ' #I #W '
 set-window-option -g window-status-format ' #I #W '
-set -g status-right '%Y-%m-%d | %H:%M'
+set -g status-right '[%Y-%m-%d %H:%M]'
+set -g status-utf8 on
 
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
+set-option -g status-fg colour118
 set-option -g status-attr default
 
 # default window title colors
@@ -45,7 +49,7 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg colour154
 set-window-option -g window-status-current-bg default
 
 # pane border
@@ -54,12 +58,11 @@ set-option -g pane-active-border-fg colour240 #base01
 
 # message text
 set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-fg colour33
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-colour colour34
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
-
