tmux: proxy to clipboard

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -14,6 +14,8 @@ bind r source-file ~/.tmux.conf
 
 # copy mode like vi
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # window
 bind p last-window
