--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -40,26 +40,21 @@ set -g status-right '[%Y-%m-%d %H:%M]'
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour118
-set-option -g status-attr default
+set-option -g status-style bg=colour235,fg=colour118
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour244,bg=default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour154
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style fg=colour154,bg=default
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour240
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour33
+set-option -g message-style bg=colour235,fg=colour33
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
